<resources>
    <string name="app_name">Comtrade Viewer</string>
    <string name="skip_text">Skip</string>

    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="shr_app_name">Title</string>
    <string name="content_description_favorite">favorite</string>
    <string name="content_description_search">search</string>
    <string name="content_description_more">more</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="more">more</string>
    <string name="page_title">title</string>
    <string name="recordList">recordList</string>
    <string name="content_description_recordList">recordList</string>
    <string name="addItem">addItem</string>
    <string name="content_description_addItem">addItem</string>
    <string name="config">Config</string>
    <string name="table">Table</string>
    <string name="chart">Chart</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="email_us">Email Us</string>
    <string name="delete_file">Delete File</string>
    <string name="ied_image">IED Image</string>
    <string name="about_comtrade">About COMTRADE</string>
    <string name="settings">Settings</string>
    <string name="header_title">Comtrade Viewer</string>
    <string name="header_text">1.0</string>
    <string name="skip">SKIP</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="title">Title</string>
    <string name="onbording_step_1_text">Welcome to COMTRADE Viewer</string>
    <string name="onbording_step_2_text">With this app you can open a COMTRADE ascilograms in ASCII format</string>
    <string name="onbording_step_3_text">Please send us your suggestions for improving the App</string>
    <string name="onbording_step_1_title">Welcome</string>
    <string name="onbording_step_2_title">Format support</string>
    <string name="onbording_step_3_title">Help us</string>
    <string name="file_already_in_list">File already in list</string>
    <string name="coming_soon">Coming soon</string>
    <string name="cannot_open_file">Cannot open file</string>
    <string name="file_format_error">File format error</string>
    <string name="require_permission">Require permission</string>
    <string name="station_name">Station Name</string>
    <string name="id">Id</string>
    <string name="file_type">File Type</string>
    <string name="analog_channels">Analog Channels</string>
    <string name="discrete_channels">Discrete Channels</string>
    <string name="frequency">Frequency</string>
    <string name="start_time">Start Time</string>
    <string name="trigger_time">Trigger Time</string>
</resources>